misp-docker/kubernetes/manifests/mysql.yaml
# This works as a minimum viable db, but is not recommended
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app.kubernetes.io/name: misp-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: misp-mysql
  serviceName: "misp-mysql"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: misp-mysql
    spec:
      containers:
        - name: misp-mysql
          image: "mariadb:10.11"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3306
            name: misp-mysql
            protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 15Gi
