misp-docker/kubernetes/manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      containers:
        - name: redis
          image: "redis:8.2.1"
          imagePullPolicy: IfNotPresent
          args:
            - --requirepass
            - "$(REDIS_PASSWORD)"
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
